--- a/shop.html
+++ b/shop.html
@@ -24,21 +24,24 @@
             <div class="nav-menu" id="nav-menu">
                 <ul class="nav-list">
                     <li class="nav-item">
-                        <a href="./index.html" class="nav-link"> Inicio </a>
+                        <a href="./index.html#featured" class="nav-link"> Nuevos lanzamientos </a>
                     </li>
                     <li class="nav-item">
-                        <a href="./index.html#featured" class="nav-link"> Destacado </a>
+                        <a href="./index.html#men" class="nav-link"> Hombre </a>
                     </li>
                     <li class="nav-item">
                         <a href="./index.html#women" class="nav-link"> Mujer </a>
                     </li>
                     <li class="nav-item">
-                        <a href="./index.html#new" class="nav-link"> Nuevo </a>
+                        <a href="./index.html#offert" class="nav-link"> Ofertas </a>
                     </li>
                     <li class="nav-item">
-                        <a href="./shop.html" class="nav-link"> Tienda </a>
+                        <a href="./shop.html" class="nav-link"> Todo </a>
                     </li>
                 </ul>
+            </div>
+            <div class="nav-shop">
+                <i class='bx bx-heart'></i>
             </div>
             <div class="nav-shop">
                 <i class='bx bx-shopping-bag'></i>
@@ -54,79 +57,79 @@
 
                 <article class="sneaker">
 
-                    <img src="./img/featured1.png" alt="sneaker en venta 1" class="sneaker-img">
-                    <span class="sneaker-name">Nike Jordan</span>
-                    <span class="sneaker-price">$149.99</span>
+                    <img src="./img/zoomSpan3_adobespark.png" alt="sneaker en venta 1" class="sneaker-img">
+                    <span class="sneaker-name">Zoom Span 3</span>
+                    <span class="sneaker-price">$1,849</span>
                     <a href="#" class="button-light">Añadir <i class='bx bx-right-arrow-alt button-icon'></i> </a>
                 </article>
 
                 <article class="sneaker">
-                     <img src="./img/featured2.png" alt="sneaker en venta 1" class="sneaker-img">
-                        <span class="sneaker-name">Nike Free RN</span>
-                        <span class="sneaker-price">$149.99</span>
+                     <img src="./img/blazer_adobespark.png" alt="sneaker en venta 1" class="sneaker-img">
+                        <span class="sneaker-name"> Blazer Mid '77</span>
+                        <span class="sneaker-price">$2,399</span>
                         <a href="#" class="button-light">Añadir <i class='bx bx-right-arrow-alt button-icon'></i> </a>
                 </article>
 
                 <article class="sneaker">
-                    <img src="./img/featured3.png" alt="sneaker en venta 1" class="sneaker-img">
-                    <span class="sneaker-name">Nike Free RN</span>
-                    <span class="sneaker-price">$149.99</span>
+                    <img src="./img/airmax95_adobespark.png" alt="sneaker en venta 1" class="sneaker-img">
+                    <span class="sneaker-name">Air Max 95</span>
+                    <span class="sneaker-price">$3,499</span>
                     <a href="#" class="button-light">Añadir <i class='bx bx-right-arrow-alt button-icon'></i> </a>
                 </article>
 
                 <article class="sneaker">
-                    <img src="./img/new1.png" alt="sneaker en venta 1" class="sneaker-img">
-                    <span class="sneaker-name">Nike Sply</span>
-                    <span class="sneaker-price">$79.99</span>
+                    <img src="./img/airMasSC_adobespark.png" alt="sneaker en venta 1" class="sneaker-img">
+                    <span class="sneaker-name">Air Max SC</span>
+                    <span class="sneaker-price">$1,699</span>
                     <a href="#" class="button-light">Añadir <i class='bx bx-right-arrow-alt button-icon'></i> </a>
                 </article>
                 <article class="sneaker">
                     <img src="./img/new2.png" alt="sneaker en venta 1" class="sneaker-img">
                     <span class="sneaker-name">Nike Sply</span>
-                    <span class="sneaker-price">$79.99</span>
+                    <span class="sneaker-price">$3,499</span>
                     <a href="#" class="button-light">Añadir <i class='bx bx-right-arrow-alt button-icon'></i> </a>
                 </article>
                 <article class="sneaker">
                     <img src="./img/new3.png" alt="sneaker en venta 1" class="sneaker-img">
                     <span class="sneaker-name">Nike Sply</span>
-                    <span class="sneaker-price">$79.99</span>
+                    <span class="sneaker-price">$3,499</span>
                     <a href="#" class="button-light">Añadir <i class='bx bx-right-arrow-alt button-icon'></i> </a>
                 </article>
                 <article class="sneaker">
                     <img src="./img/new4.png" alt="sneaker en venta 1" class="sneaker-img">
                     <span class="sneaker-name">Nike Sply</span>
-                    <span class="sneaker-price">$79.99</span>
+                    <span class="sneaker-price">$3,499</span>
                     <a href="#" class="button-light">Añadir <i class='bx bx-right-arrow-alt button-icon'></i> </a>
                 </article>
                 <article class="sneaker">
                     <img src="./img/new5.png" alt="sneaker en venta 1" class="sneaker-img">
                     <span class="sneaker-name">Nike Sply</span>
-                    <span class="sneaker-price">$79.99</span>
+                    <span class="sneaker-price">$3,499</span>
                     <a href="#" class="button-light">Añadir <i class='bx bx-right-arrow-alt button-icon'></i> </a>
                 </article>
 
                 <article class="sneaker">
                     <img src="./img/women1.png" alt="sneaker de  mujer" class="sneaker-img">
-                    <span class="sneaker-name">Nike Womens</span>
-                    <span class="sneaker-price">$129.99</span>
+                    <span class="sneaker-name">Air Max 2021</span>
+                    <span class="sneaker-price">$3,599</span>
                     <a href="#" class="button-light">Añadir <i class='bx bx-right-arrow-alt button-icon'></i> </a>
                 </article>
                 <article class="sneaker">
                     <img src="./img/women2.png" alt="sneaker de  mujer" class="sneaker-img">
-                    <span class="sneaker-name">Nike Womens</span>
-                    <span class="sneaker-price">$129.99</span>
+                    <span class="sneaker-name">Air Force 1</span>
+                    <span class="sneaker-price">$2,799</span>
                     <a href="#" class="button-light">Añadir <i class='bx bx-right-arrow-alt button-icon'></i> </a>
                 </article>
                 <article class="sneaker">
                     <img src="./img/women3.png" alt="sneaker de  mujer" class="sneaker-img">
-                    <span class="sneaker-name">Nike Womens</span>
-                    <span class="sneaker-price">$129.99</span>
+                    <span class="sneaker-name">Air Max Koko</span>
+                    <span class="sneaker-price">$2,199</span>
                     <a href="#" class="button-light">Añadir <i class='bx bx-right-arrow-alt button-icon'></i> </a>
                 </article>
                 <article class="sneaker">
                     <img src="./img/women4.png" alt="sneaker de  mujer" class="sneaker-img">
-                    <span class="sneaker-name">Nike Womens</span>
-                    <span class="sneaker-price">$129.99</span>
+                    <span class="sneaker-name">Nike Free TR</span>
+                    <span class="sneaker-price">$2,199</span>
                     <a href="#" class="button-light">Añadir <i class='bx bx-right-arrow-alt button-icon'></i> </a>
                 </article>
 
@@ -149,17 +152,17 @@
     <footer class="footer section">
         <div class="fotter-container bg-grid">
             <div class="footer-box">
-                <h3 class="footer-title">Marco Andrés</h3>
+                <h3 class="footer-title"><a href="./index.html">Marco Andrés</a></h3>
                 <p class="footer-description">Nueva collecion de tennis 2021.</p>
             </div>
             <div class="footer-box">
                 <h3 class="footer-title">Explorar</h3>
                 <ul>
-                    <li><a href="./index.html" class="footer-link" >Inicio</a></li>
-                    <li><a href="./index.html#featured" class="footer-link" >Destacado</a></li>
+                    <li><a href="./index.html#featured" class="footer-link" >Nuevos lanzamientos</a></li>
+                    <li><a href="./index.html#men" class="footer-link" >Hombre</a></li>
                     <li><a href="./index.html#women" class="footer-link" >Mujer</a></li>
-                    <li><a href="./index.html#new" class="footer-link" >Nuevo</a></li>
-                    <li><a href="./shop.html" class="footer-link" >Tienda</a></li>
+                    <li><a href="./index.html#offert" class="footer-link" >Ofertas</a></li>
+                    <li><a href="./shop.html" class="footer-link" >Todo</a></li>
                 </ul>
             </div>
             <div class="footer-box">
@@ -178,7 +181,7 @@
                 <a href="#" class="footer-social">  <i class='bx bxl-instagram-alt' ></i> </a>    
             </div>
         </div>
-        <p class="footer-copy"> &copy; <script>document.write( new Date.getFullYear() );</script>. Todos los derechos reservados.</p>
+        <p class="footer-copy"> &copy; <script> var d = new Date();  document.write( d.getFullYear() ) </script> . Todos los derechos reservados.</p>
     </footer>
 
     <!--===== MAIN JS =====-->
