--- a/index.html
+++ b/index.html
@@ -54,25 +54,28 @@
         <section class="slider-container">
 
             <div class="slider-item fade">
-
-                <img srcset="./img/adidas-logo.jpg 576w,
-                    ./img/adidas1.jpg 768w" src="./img/adidas1.jpg" alt="banner 1">
-
-
+                <picture>
+                    <source srcset="./img/adidasblack.jpg" media="(max-width:576px)">
+                    <img src="./img/adidas1.jpg" alt="Banner de la marca adidas">
+                </picture>
             </div>
             <div class="slider-item fade">
-                <img srcset="./img/nike-v.png 576w,
-                             ./img/nike2.jpg 768w" src="./img/nike2.jpg" alt="banner 1">
+                <picture>
+                    <source srcset="./img/nike-v.png" media="(max-width:576px)">
+                    <img src="./img/nike2.jpg" alt="Banner de la marca nike">
+                </picture>
             </div>
             <div class="slider-item fade">
-                <img srcset="./img/nike-logo.jpg 576w,
-                             ./img/nike4.jpg 768w" src="./img/nike4.jpg" alt="banner 1">
+                <picture>
+                    <source srcset="./img/nikebanner.jpg" media="(max-width:576px)">
+                    <img src="./img/nike4.jpg" alt="Banner de la marca nike">
+                </picture>
             </div>
-
-
             <div class="slider-item fade">
-                <img srcset="./img/adidas4.jpg 576w,
-                             ./img/adidas2.jpg 768w" src="./img/adidas2.jpg" alt="banner 1">
+                <picture>
+                    <source srcset="./img/adidas4.jpg" media="(max-width:576px)">
+                    <img src="./img/adidas2.jpg" alt="Banner de la marca adidas">
+                </picture>
             </div>
 
 
